src/test/deca/context/invalid/created/class-extends-unknown.deca
//Description :
// Test de extends sans définition de la super classe
//
// Resultats :
// Erreur


class Premiere extends A {

}

{}
